# SimplyHttpServerBS

./: CMakeLists.txt  README.md  error.html  gmon.out  main.cpp
include/: Log.h  MLibEvent.h  Pub.h  WebOp.h
src/: CMakeLists.txt  Log.cpp  MLibEvent.cpp  Pub.cpp  WebOp.cpp
webpath/: gmon.out
webpath/html/: dir_header.html  dir_tail.html  error.html
